--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -20,7 +20,7 @@
     <div class="col-6" style="display: flex;flex-direction: row-reverse;">
         <Button Danger Type="@ButtonType.Primary" Style="margin-right:5px">@L["DeleteItem"]</Button>
         <Button Type="@ButtonType.Primary" Style="margin-right:5px; background-color:skyblue">@L["CopyItem"]</Button>
-        <Button Type="@ButtonType.Primary" Style="margin-right:5px">@L["NewItem"]</Button>
+        <Button Type="@ButtonType.Primary" Style="margin-right:5px" OnClick="CreateNewItem">@L["NewItem"]</Button>
     </div>
 </div>
 <div>
