--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -1,10 +1,13 @@
 ﻿@page "/Items/New"
+
 @using Pikachu.Items;
 @using Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
+
 @inject IItemAppService AppService
 @inject NavigationManager NavigationManager
 @inject IStringLocalizer<PikachuResource> L
+@inject IMessageService _message
 
 
 <style>
@@ -16,6 +19,16 @@
         background: #fff;
         border-style: dashed;
     }
+    /* you can make up upload button and sample style by using stylesheets */
+    .ant-upload-select-picture-card i {
+        color: #999;
+        font-size: 32px;
+    }
+
+    .ant-upload-select-picture-card .ant-upload-text {
+        margin-top: 8px;
+        color: #666;
+    }
 </style>
 
 <div class="col-12">
@@ -23,182 +36,256 @@
         <h3>@L["NewItem"]</h3>
     </div>
     <div>
-        <div Class=" col-12 row">
-            <div Class="col-2">
-                <fieldLabel>@L["ItemName"]</fieldLabel>
-            </div>
-            <div Class="col-9">
-                <FormItem Label="Username">
-                    <Input @bind-Value="@NewEntity.ItemName" MaxLength="@maxtextCount" />
-                </FormItem>
-            </div>
-            <div Class="col-1">
-                <fpan>@(maxtextCount - NewEntity.ItemName.Count())/@maxtextCount</fpan>
-            </div>
-        </div>
-        <div Class="col-12 row">
-            <div Class="col-2">
-                <fieldLabel>@L["ItemImage"]</fieldLabel>
-            </div>
-            <div Class="col-10">
-                <AntDesign.Upload Name="@L["ItemImage"]"
-                @bind-FileList="fileList"
-                                  ShowButton="fileList?.Count < 8"
-                                  ListType="picture-card"
-                                  OnPreview="(file)=> {
-                                                 Console.WriteLine(file.FileName);
-                                                 Console.WriteLine(file.Url);
-                                                 previewVisible = true;
-                                                 previewTitle = file.FileName;
-                                                 imgUrl = file.Url;
-                                                 }"
-                                  OnChange="HandleChange">
-                    <div>
-                        <Icon Type="plus"></Icon>
-                        <div className="ant-upload-text">Upload</div>
-                    </div>
-
-                </AntDesign.Upload>
-                <Modal Visible="previewVisible"
-                       Title="previewTitle"
-                       OnCancel="()=> previewVisible=false">
-                    <img style="width: 100%" src="@imgUrl" />
-                </Modal>
-            </div>
-        </div>
-        <div Class=" col-12 row">
-            <div Class="col-2">
-                <fieldLabel>@L["ItemDescription"]</fieldLabel>
-            </div>
-            <div Class="col-9">
-                <div class="col-12">
-                    <fieldLabel></fieldLabel>
-                    <Input Placeholder="@L["ItemDescription"]" @bind-Value="@NewEntity.ItemDescriptionTitle" />
+        <Form Loading="loading" Model="@createItemDto"
+              LabelColSpan="8"
+              WrapperColSpan="16">
+            <div class=" col-12 row">
+                <div class="col-2">
+                    <label>@L["ItemName"]</label>
                 </div>
-                <div Class=" col-12">
-                    @*<RichTextEdit @ref="richTextEditRef"
-                                  Theme="RichTextEditTheme.Snow"
-                                  ContentChanged="@OnContentChanged"
-                                  PlaceHolder="Type your post here..."
-                                  ReadOnly="@readOnly"
-                                  SubmitOnEnter="false"
-                                  ToolbarPosition="Placement.Bottom">
+                <div class="col-9">
+                    <Input @bind-Value="@createItemDto.ItemName" MaxLength="@maxtextCount" />
+                </div>
+                <div class="col-1">
+                    <span>
+                        @(string.IsNullOrWhiteSpace(createItemDto.ItemName) ? 60 : (maxtextCount - createItemDto.ItemName.Count()))/@maxtextCount
+                    </span>
+                </div>
+            </div>
+            <div class="col-12 row">
+                <div class="col-2">
+                    <label>@L["ItemImage"]</label>
+                </div>
+                <div class="col-10 row">
+                    <Upload Action="https://www.mocky.io/v2/5cc8019d300000980a055e76"
+                            Name="avatar"
+                            @bind-FileList="itemImageList"
+                            ShowButton="itemImageList?.Count < 20"
+                            ListType="picture-card"
+                            OnPreview="(image)=> {
+                           Console.WriteLine(image.FileName);
+                           Console.WriteLine(image.Url);
+                           previewVisible = true;
+                           previewTitle = image.FileName;
+                           imgUrl = image.Url;
+                       }"
+                            OnChange="ItemImageHandleChange">
+                        <div>
+                            <Icon Type="plus"></Icon>
+                            <div className="ant-upload-text">@L["Upload"]</div>
+                        </div>
+
+                    </Upload>
+                    <Modal Visible="previewVisible"
+                           Title="previewTitle"
+                           OnCancel="()=> previewVisible=false">
+                        <img style="width: 100%" src="@imgUrl" />
+                    </Modal>
+                    @*<Upload Action="https://www.mocky.io/v2/5cc8019d300000980a055e76"
+                            Name="avatar"
+                    @bind-FileList="fileList"
+                            ShowButton="fileList?.Count < 8"
+                            ListType="picture-card"
+                            OnPreview="(file)=> {
+                           Console.WriteLine(file.FileName);
+                           Console.WriteLine(file.Url);
+                           previewVisible = true;
+                           previewTitle = file.FileName;
+                           imgUrl = file.Url;
+                       }"
+                            OnChange="HandleChange">
+                        <div>
+                            <Icon Type="plus"></Icon>
+                            <div className="ant-upload-text">Upload</div>
+                        </div>
+
+                    </Upload>
+                    <Modal Visible="previewVisible"
+                           Title="previewTitle"
+                           OnCancel="()=> previewVisible=false">
+                        <img style="width: 100%" src="@imgUrl" />
+                    </Modal>
+*@
+
+                </div>
+            </div>
+            <div class=" col-12 row">
+                <div class="col-2">
+                    <fieldLabel>@L["ItemDescription"]</fieldLabel>
+                </div>
+                <div class="col-9">
+                    <div class="col-12">
+                        <fieldLabel></fieldLabel>
+                        <Input Placeholder="@L["ItemDescriptionTitle"]" @bind-Value="@createItemDto.ItemDescriptionTitle" />
+                    </div>
+                    <div class=" col-12">
+                        <TextArea @bind-Value="@createItemDto.ItemName" MaxLength="@maxtextCount" />
+                        @*<RichTextEdit @ref="richTextEditRef"
+                        Theme="RichTextEditTheme.Snow"
+                        ContentChanged="@OnContentChanged"
+                        PlaceHolder="Type your post here..."
+                        ReadOnly="@readOnly"
+                        SubmitOnEnter="false"
+                        ToolbarPosition="Placement.Bottom">
                         <editor>My example content</editor>
                         <Toolbar>
-                            <RichTextEditToolbarGroup>
-                                <RichTextEditToolbarButton Action="RichTextEditAction.Bold" />
-                                <RichTextEditToolbarButton Action="RichTextEditAction.Italic" />
-                                <RichTextEditToolbarSelect Action="RichTextEditAction.Size">
-                                    <RichTextEditToolbarSelectItem Value="small" />
-                                    <RichTextEditToolbarSelectItem Selected />
-                                    <RichTextEditToolbarSelectItem Value="large" />
-                                    <RichTextEditToolbarSelectItem Value="huge">Very Big</RichTextEditToolbarSelectItem>
-                                </RichTextEditToolbarSelect>
-                                <RichTextEditToolbarButton Action="RichTextEditAction.List" Value="ordered" />
-                                <RichTextEditToolbarButton Action="RichTextEditAction.List" Value="bullet" />
-                                <RichTextEditToolbarButton Action="RichTextEditAction.Image" Value="Image" />
-                            </RichTextEditToolbarGroup>
+                        <RichTextEditToolbarGroup>
+                        <RichTextEditToolbarButton Action="RichTextEditAction.Bold" />
+                        <RichTextEditToolbarButton Action="RichTextEditAction.Italic" />
+                        <RichTextEditToolbarSelect Action="RichTextEditAction.Size">
+                        <RichTextEditToolbarSelectItem Value="small" />
+                        <RichTextEditToolbarSelectItem Selected />
+                        <RichTextEditToolbarSelectItem Value="large" />
+                        <RichTextEditToolbarSelectItem Value="huge">Very Big</RichTextEditToolbarSelectItem>
+                        </RichTextEditToolbarSelect>
+                        <RichTextEditToolbarButton Action="RichTextEditAction.List" Value="ordered" />
+                        <RichTextEditToolbarButton Action="RichTextEditAction.List" Value="bullet" />
+                        <RichTextEditToolbarButton Action="RichTextEditAction.Image" Value="Image" />
+                        </RichTextEditToolbarGroup>
                         </e>
-                    </RichTextEdit>*@
+                        </RichTextEdit>*@
+                    </div>
+                </div>
+                <div class="col-1">
+                    <span>
+                        @(string.IsNullOrWhiteSpace(createItemDto.ItemDescriptionTitle) ? 60 : (maxtextCount - createItemDto.ItemDescriptionTitle.Count()))/@maxtextCount
+                    </span>
                 </div>
             </div>
-            <div Class="col-1">
-                <span>
-                    @(maxtextCount - NewEntity.ItemDescriptionTitle.Count())/@maxtextCount
-                </span>
-            </div>
-        </div>
-        <div Class=" col-12 row">
-            <div Class="col-2">
-                <fieldLabel>@L["ItemTags"]</fieldLabel>
-            </div>
-            <div Class="col-10">
-                <div>
-                    <Tag>Unremovable</Tag>
-                    @foreach (var item in lstTags)
+            <div class="col-12 row">
+                <div class="col-2">
+                    <fieldLabel>@L["ItemTags"]</fieldLabel>
+                </div>
+                <div class="col-10">
+                    @foreach (var tag in itemTags)
                     {
-                        <Tag @key="item" Closable OnClose="()=>OnClose(item)">@item</Tag>
+                        <Tag @key="tag" Closable OnClose="()=>OnTagClose(tag)">@tag</Tag>
                     }
-                    @if (inputVisible)
+                    @if (tagInputVisible)
                     {
-                        <Input @ref="_inputRef" Style="width: 78px" Size="small" @bind-Value="_inputValue" OnBlur="HandleInputConfirm" OnPressEnter="HandleInputConfirm" AutoFocus />
+                        <Input @ref="inputTagRef" Style="width: 78px" Size="small" @bind-Value="inputTagValue" OnBlur="HandleTagInputConfirm" OnPressEnter="HandleTagInputConfirm" AutoFocus />
                     }
                     else
                     {
-                        <Tag Class="site-tag-plus" OnClick="@(() => inputVisible = !inputVisible)">
-                            <Icon Type="plus" />New Tag
+                        <Tag Class="site-tag-plus" OnClick="@(() => tagInputVisible = !tagInputVisible)">
+                            <Icon Type="plus" />@L["NewTag"]
                         </Tag>
                     }
                 </div>
             </div>
-        </div>
+            <div class="col-12 row">
+                <div class="col-2">
+                    <label>@L["ItemStyle"]</label>
+                </div>
+                <div class="col-10">
+                    <div>
+                        <Input Placeholder="@L["ItemStyleKey"]" @bind-Value="@createItemDto.InventoryAccount" />
+                    </div>
+                    <div style="padding-left:33px">
+                        <Input Placeholder="@L["ItemStyleValue"]" @bind-Value="@createItemDto.InventoryAccount" />
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 row">
+                <div class="col-2">
+                    <label>@L["PriceAndInventory"]</label>
+                </div>
+                <div class="col-10">
+                    <div>
+                       @* <Table TItem="IData" DataSource="@data">
+                            <PropertyColumn Property="c=>c.Name"></PropertyColumn>
+                            <PropertyColumn Property="c=>c.Age"></PropertyColumn>
+                            <PropertyColumn Property="c=>c.Address"></PropertyColumn>
+                            <PropertyColumn Property="c=>c.Tags"></PropertyColumn>
+                        </Table>*@
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 row">
+                <div class="col-2">
+                    <label>@L["CommodityAttributes"]</label>
+                </div>
+                <div class="col-10">
+                    <div class="col-12 row">
+                        <div class="col-3">
+                            <label>@L["TimeLimitPeriod"]</label>
+                        </div>
+                        <div class="col-3">
+                            <DatePicker Style="width:100%" Placeholder="@L["StartDate"].ToString()" TValue="DateTime?" Picker="@DatePickerType.Date" />
+                        </div>
+                        <div class="col-3">
+                            <DatePicker Style="width:100%" Placeholder="@L["EndDate"].ToString()" TValue="DateTime?" Picker="@DatePickerType.Date" />
+                        </div>
+                    </div>
+                    <div class="col-12 row">
+                        <div class="col-3">
+                            <label>@L["LimitQuantity"]</label>
+                        </div>
+                        <div class="col-3">
+                            <Input @bind-Value="@createItemDto.InventoryAccount" />
+                        </div>
+                    </div>
+                    <div class="col-12 row">
+                        <div class="col-3">
+                            <label>@L["ShareProfit"]</label>
+                        </div>
+                        <div class="col-3">
+                            <Input @bind-Value="@createItemDto.InventoryAccount" />
+                        </div>
+                    </div>
+                    <div class="col-12 row">
+                        <div class="col-3">
+                            <label>@L["FreeShipping"]</label>
+                        </div>
+                        <div class="col-3">
+                            <Input @bind-Value="@createItemDto.InventoryAccount" />
+                        </div>
+                    </div>
+                    <div class="col-12 row">
+                        <div class="col-3">
+                            <label>@L["ShippingMethod"]</label>
+                        </div>
+                        <div class="col-3">
+                            <Select TItem="ShippingMethod"
+                                    TItemValue="string"
+                                    DataSource="@shippingMethods"
+                                    @bind-Value="@_selectedValue"
+                                    LabelName="@nameof(ShippingMethod.Name)"
+                                    ValueName="@nameof(ShippingMethod.Value)"
+                                    Placeholder="Select a person"
+                                    DefaultActiveFirstOption="false"
+                                                        EnableSearch>
+                            </Select>
+                        </div>
+                    </div>
+                    <div class="col-12 row">
+                        <div class="col-3">
+                            <label>@L["TaxType"]</label>
+                        </div>
+                        <div class="col-3">
+                            <Select TItem="TaxType"
+                                    TItemValue="string"
+                                    DataSource="@taxTypes"
+                            @bind-Value="@_selectedValue"
+                                    LabelName="@nameof(TaxType.Name)"
+                                    ValueName="@nameof(TaxType.Value)"
+                                    Placeholder="Select a person"
+                                    DefaultActiveFirstOption="false">
+                            </Select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="text-align: center; margin-top:5px ;">
+                <Button Danger Type="@ButtonType.Primary" Style="margin-right:5px">@L["Cancel"]</Button>
+                <Button Type="@ButtonType.Primary" Style="margin-right:5px">@L["Save"]</Button>
+                <Button Type="@ButtonType.Primary" Style="margin-right:5px; background-color:skyblue">@L["Preview"]</Button>
+
+            </div>
+        </Form>
     </div>
 </div>
 
-
-
-<Card>
-    <CardBody>
-        <Validations ValidateOnLoad="false">
-
-
-
-        </Validations>
-    </CardBody>
-    <CardFooter>
-        <Button Type="@ButtonType.Link" To="Items" Class="mr-3">
-            @L["Cancel"]
-        </Button>
-        <Button Type="@ButtonType.Primary" HtmlType="submit" PreventDefaultOnSubmit="true" Clicked="CreateEntityAsync">
-            @L["Save"]
-        </Button>
-    </CardFooter>
-</Card>
-
 @code {
-    private bool inputVisible { get; set; } = false;
-    string _inputValue;
-    Input<string> _inputRef;
-    List<string> lstTags { get; set; } = new List<string>();
-
-    protected override void OnInitialized()
-    {
-        lstTags.Add("Tag 2");
-        lstTags.Add("Tag 3");
-    }
-
-    void ValueChange(ChangeEventArgs value)
-    {
-        lstTags.Add(value.Value.ToString());
-    }
-
-    void OnClose(string item)
-    {
-        lstTags.Remove(item);
-    }
-
-    void HandleInputConfirm()
-    {
-        if (string.IsNullOrEmpty(_inputValue))
-        {
-            CancelInput();
-            return;
-        }
-
-        string res = lstTags.Find(s => s == _inputValue);
-
-        if (string.IsNullOrEmpty(res))
-        {
-            lstTags.Add(_inputValue);
-        }
-
-        CancelInput();
-    }
-
-    void CancelInput()
-    {
-        this._inputValue = "";
-        this.inputVisible = false;
-    }
 
 }
