--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -20,7 +20,17 @@
     <base href="~/" />
     <link href="~/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/libs/bootstrap/css/bootstrap.rtl.min.css" rel="stylesheet" />
+
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+
+
     <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
+    <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
+
     <abp-style-bundle name="@BlazorAntDesignThemeBundles.Styles.Global" />
 </head>
 <body class="abp-application-layout bg-light @rtl">
